--- a/LyricsTranslator/LyricsTranslator/Base.lproj/Main.storyboard
+++ b/LyricsTranslator/LyricsTranslator/Base.lproj/Main.storyboard
@@ -16,13 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Song Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NiK-R2-hKz" userLabel="Song Name">
+                                <rect key="frame" x="34" y="19" width="222" height="30"/>
+                                <accessibility key="accessibilityConfiguration" hint="Song Name"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hij-V5-zbG">
                                 <rect key="frame" x="472" y="19" width="76" height="30"/>
                                 <state key="normal" title="Go!"/>
+                                <connections>
+                                    <action selector="submitButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZVj-kr-YoV"/>
+                                </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NiK-R2-hKz" userLabel="Song Name">
-                                <rect key="frame" x="80" y="20" width="325" height="30"/>
-                                <accessibility key="accessibilityConfiguration" hint="Song Name"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Artist" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d4g-DE-W9f">
+                                <rect key="frame" x="282" y="19" width="182" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -30,8 +38,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="artistTextField" destination="d4g-DE-W9f" id="LPA-3x-gSd"/>
                         <outlet property="songTextField" destination="NiK-R2-hKz" id="rCJ-Yk-WNd"/>
-                        <outlet property="submitButton" destination="hij-V5-zbG" id="0dA-ez-Czc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
